--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,7 @@ install:
 - cargo -V
 platform:
 - rust-1.3.0-i686-pc-windows-gnu.exe
+- rust-1.3.0-i686-pc-windows-msvc.exe
 # To build against multiple rust versions add them here
 build_script:
 - cargo build
